--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-audio-visualize": "^1.2.0",
     "react-comments-section": "^3.2.0",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^4.11.0",
