--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^4.11.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-voice-visualizer": "^2.0.4",
