--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-i18next": "^15.5.1",
     "react-intersection-observer": "^9.16.0",
+    "react-modern-audio-player": "^1.4.0-rc.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
