--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "jspdf": "^3.0.1",
+    "meyda": "^5.6.3",
     "openai": "^4.89.0",
     "react": "^18.2.0",
     "react-comments-section": "^3.2.0",
