--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-comments-section": "^3.2.0",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
+    "react-flip-numbers": "^3.0.9",
     "react-h5-audio-player": "^3.10.0-rc.1",
     "react-i18next": "^15.5.1",
     "react-intersection-observer": "^9.16.0",
