--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.2",
     "thirdweb": "^5.93.4",
     "web-vitals": "^2.1.4"
