--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@nivo/radar": "^0.96.0",
     "@tanstack/react-ranger": "^0.0.4",
     "axios": "^1.8.4",
+    "embla-carousel-react": "^8.6.0",
     "ethers": "^6.13.7",
     "google-spreadsheet": "^4.1.4",
     "i18n": "^0.15.1",
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "jspdf": "^3.0.1",
+    "keen-slider": "^6.8.6",
     "openai": "^4.89.0",
     "react": "^18.2.0",
     "react-comments-section": "^3.2.0",
