--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nivo/radar": "^0.96.0",
     "@tanstack/react-ranger": "^0.0.4",
     "axios": "^1.8.4",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.13.7",
     "google-spreadsheet": "^4.1.4",
