--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@nivo/radar": "^0.96.0",
     "@tanstack/react-ranger": "^0.0.4",
     "axios": "^1.8.4",
+    "cropperjs": "^2.0.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.13.7",
@@ -22,6 +23,7 @@
     "openai": "^4.89.0",
     "react": "^18.2.0",
     "react-comments-section": "^3.2.0",
+    "react-cropper": "^2.3.3",
     "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-flip-numbers": "^3.0.9",
